--- a/frontEnd/src/styles/AddCustomer-detail.css
+++ b/frontEnd/src/styles/AddCustomer-detail.css
@@ -6,9 +6,10 @@
     border-radius: 12px;
     box-shadow: 0 4px 12px rgba(0,0,0,0.1);
     font-family: "Poppnis";
-    
   }
-  
+  .add-customer h1{
+    font-family: "Poppins";
+  }
   .manage-customer h1 {
     text-align: center;
     margin-bottom: 25px;
@@ -21,6 +22,7 @@
     margin-top: 15px;
     margin-bottom: 5px;
     color: #555;
+    font-family: "Poppins";
   }
   
   .customer-form input[type="text"],
@@ -35,14 +37,13 @@
   
 
   
-  /* Form Actions */
   .form-actions {
     display: flex;
     gap: 10px;
     margin-top: 20px;
+ 
   }
 
-  /* Error message */
   .manage-customer p {
     margin-top: 10px;
     font-size: 14px;
