--- a/frontEnd/src/styles/CustomerList.css
+++ b/frontEnd/src/styles/CustomerList.css
@@ -19,6 +19,6 @@
     width: 100%;
     display: flex;
     flex-wrap: wrap;
-    gap: 2em;
+    justify-content: space-around;
     padding: 2em 0 ;
   }
