--- a/frontEnd/src/styles/CustomersCard.css
+++ b/frontEnd/src/styles/CustomersCard.css
@@ -11,10 +11,9 @@
     border: 1px solid hsl(0, 5%, 82%);
     border-radius: 20px;
   }
-  .photo-gallery {
+  .customer-gallery {
     display: flex;
     justify-content: center;
-    align-items: center;
     margin-top: 10px;
   }
   
@@ -44,16 +43,20 @@
     color: #666;
     font-size: 1.1em;
   }
-  
+  .trip-title{
+    font-size: 1.5em;
+    margin: 1em 0 0 0;
+    color: #ffa94d;
+  }
   .customer-testimonials {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 2em;
   }
   .comment-section{
-    padding: 1em;
+    padding: 0 1em  1em 1em;
     text-align: center;
-    margin: 8px 0;
+    margin: 0 0  8px 0;
   }
   
   .comment-card {
